src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 255, 255, 255;
  --background-start-rgb: 0, 0, 0;
  --background-end-rgb: 0, 12, 64;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 12, 64;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
  contain: paint;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }

  /* Chromium Scroll */
  ::-webkit-scrollbar {
    width: 5px;
    height: 10px;
  }

  ::-webkit-scrollbar-track {
    border-radius: 100vh;
    background: #ecfff680;
  }

  ::-webkit-scrollbar-thumb {
    background: #3a709498;
    border-radius: 100vh;
    border: 3px solid #ffffff67;
  }

  ::-webkit-scrollbar-thumb:hover {
    background: #0099ff98;
  }

  /* Firefox Scroll */
  @-moz-document url-prefix() {
    * {
      scrollbar-width: thin;
      scrollbar-color: #ecfff680 #3a709498;
    }
  }
}

